--- a/WEB/Public/CSS/Feed.css
+++ b/WEB/Public/CSS/Feed.css
@@ -192,8 +192,8 @@ nav {
 }
 
 .profile-dropdown-pic {
-    width: 40px; /* Tamanho da imagem do perfil */
-    height: 40px; /* Tamanho da imagem do perfil */
+    width: 45px; /* Tamanho da imagem do perfil */
+    height: 45px; /* Tamanho da imagem do perfil */
     border-radius: 50%; /* Tornar imagem redonda */
     cursor: pointer; /* Muda o cursor ao passar por cima */
     margin-left: 0px;
@@ -260,6 +260,21 @@ nav {
 }
 
 
+
+
+.post-image {
+    width: 100%; /* A imagem vai ocupar toda a largura disponível do seu container */
+    height: auto; /* Mantém a proporção da imagem */
+    border-radius: 10px; /* Bordas arredondadas */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra suave ao redor da imagem */
+    object-fit: cover; /* Garante que a imagem cubra o espaço disponível sem distorcer */
+    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Transições suaves para efeitos de hover */
+  }
+  
+  .post-image:hover {
+    transform: scale(1.05); /* Aumenta um pouco a imagem ao passar o mouse */
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); /* Sombra mais forte quando a imagem é hover */
+  }
 
 .post-form {
     margin-bottom: 20px;
