--- a/WEB/Public/CSS/Perfil.css
+++ b/WEB/Public/CSS/Perfil.css
@@ -31,7 +31,7 @@ body {
 /* Estilos para o rodapé */
 footer {
   display: block; /* Exibe o rodapé como um bloco */
-  background: #4A5C6A; /* Define a cor de fundo */
+  background: #11212D; /* Define a cor de fundo */
   color: #fff; /* Define a cor do texto */
   text-align: center; /* Alinha o texto ao centro */
   font-size: 14px; /* Tamanho da fonte */
@@ -271,26 +271,41 @@ footer {
 
 /* ---------------------- Estilo das fotos de pets na parte de "POSTAGENS" ------------------*/
 .fotos {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 15px;
-  justify-content: center;
+  display: grid; /* Usando grid para organizar em colunas */
+  grid-template-columns: repeat(3, 1fr); /* 3 colunas de tamanhos iguais */
+  gap: 20px; /* Espaço entre os cards */
+  justify-items: center; /* Centraliza as postagens dentro da grid */
   margin-top: 20px;
 }
 
-.fotos img {
-  width: 150px;
-  height: 150px;
+.fotos .postagem-card {
+  background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 100%; /* Garante que o card ocupe toda a largura da coluna */
+  overflow: hidden;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.fotos img:hover {
-  transform: scale(1.1);
-  /* Efeito de zoom ao passar o mouse */
+.fotos .postagem-card:hover {
+  transform: scale(1.05);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
+
+.fotos img {
+  width: 100%; /* Imagem ocupa toda a largura do card */
+  height: auto; /* Mantém a proporção da imagem */
+  border-radius: 10px;
+}
+
+.fotos .postagem-card .descricao {
+  padding: 15px;
+}
+
+.fotos .postagem-card .descricao p {
+  margin: 5px 0;
+}
+
 /* ---------------------- FIM Estilo das fotos de pets na parte de "POSTAGENS" ------------------*/
 
 
@@ -541,7 +556,7 @@ ul {
 /* =============== Navbar ============== */
 /* Estilo do Navbar */
 .nav1 {
-  background-color: #4A5C6A; /* Cor de fundo */
+  background-color: #11212D; /* Cor de fundo */
   padding: 15px 20px; /* Espaçamento interno */
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra */
 }
@@ -560,6 +575,20 @@ ul {
   height: auto; /* Altura automática */
   margin-left: 20px;
 }
+
+.img1{
+border-radius: 50%;
+width: 50px;
+height: 50px;
+text-align: center;
+}
+
+.img1 img {
+width: 100%;
+height: 100%;
+border-radius: 50%;
+}
+
 
 /* Estilo da Barra de Pesquisa */
 .search-bar {
